# ginbar

./: .dockerignore  .editorconfig  .env  .env.sample  .gitignore  .gitmodules  CONTEXT.md  Dockerfile  Makefile  README.md  cspell.json  dev.sh  docker-compose.yml  ginbar.service  go.work  go.work.sum  wallium.service
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreate.sh  postStart.sh
.devcontainer/pgadmin/: pgpass  servers.json
_plan/: PLAN.md
_ref/: README.md
nginx/: ginbar.vhost.conf  nginx.conf  wallium.vhost.conf
nginx/certs/: .gitkeep
scripts/: clean.sh  dev-clean.sh  download_testset.go  gen_bench_inputs.sh  install.sh  update.sh  wallium.logrotate
src/backend/: .keep  go.mod  go.sum  main.go  sqlc.yaml
src/backend/api/: .gitignore  admin.go  comment.go  import.go  import_test.go  invite.go  jobs.go  jobs_handlers.go  jobs_test.go  log_helpers.go  message.go  post.go  queue.go  roles.go  server.go  tag.go  user.go
src/backend/cache/: flush.go  redis.go  vote.go
src/backend/db/: store.go  store_admin.go  store_import.go  store_invite.go
src/backend/db/migrations/: 001_users.sql  002_posts.sql  003_comments.sql  004_comment_votes.sql  005_post_votes.sql  006_tags.sql  007_post_tags.sql  008_post_tag_votes.sql  009_posts_dirty.sql  010_post_dimensions.sql  011_invitations.sql  012_comment_parent.sql  013_messages.sql  014_message_refs.sql  015_post_filter.sql  016_filter_from_tags.sql  017_post_released.sql
src/backend/db/queries/: comment.sql  comment_vote.sql  message.sql  post.sql  post_tag.sql  post_tag_vote.sql  post_vote.sql  tag.sql  user.sql
src/backend/utils/: directories.go  download.go  image.go  image_bench_test.go  validation.go  video.go
src/frontend/: .gitignore  .keep  index.html  package.json  pnpm-lock.yaml  vite.config.js
src/frontend/src/: App.jsx  index.css
src/frontend/src/components/: Button.jsx  CommentForm.jsx  CommentItem.jsx  FilterSelector.jsx  FormField.jsx  InlinePost.jsx  Nav.jsx  PostCard.jsx  PostCardSkeleton.jsx  PostGrid.jsx  ProgressBar.jsx  RequireAdmin.jsx  RequireAuth.jsx  SectionHeader.jsx  SettingsMenu.jsx  Tabs.jsx  TagChip.jsx  ThemeSwitcher.jsx  UploadModal.jsx  UserLink.jsx  VoteButtons.jsx
src/frontend/src/pages/: Admin.jsx  Home.jsx  Login.jsx  Messages.jsx  NotFound.jsx  Post.jsx  Profile.jsx  Register.jsx  UserGrid.jsx
src/frontend/src/stores/: authStore.js  commentStore.js  inviteStore.js  (+5 more)
src/worker/: Cargo.toml  build.rs
src/worker/benches/: processing.rs
src/worker/src/: avif.rs  config.rs  db.rs  download.rs  ffmpeg.rs  lib.rs  main.rs  processing.rs  queue.rs
src/worker/test_data/: manifest.json
src/worker/test_data/images/: .gitkeep
(+5 files in other folders)
